add othello game simulator

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -1,16 +1,16 @@
 # connectx_simulator
 add_executable(connectx_simulator connectx_simulator.cpp)
 
-set_property(TARGET connectx_simulator PROPERTY CXX_STANDARD 17)
+set_property(TARGET connectx_simulator PROPERTY CXX_STANDARD 20)
 
 target_link_libraries(connectx_simulator util)
 target_link_libraries(connectx_simulator game)
 
-# reversi_simulator
-add_executable(reversi_simulator reversi_simulator.cpp)
+# othello_simulator
+add_executable(othello_simulator othello_simulator.cpp)
 
-set_property(TARGET reversi_simulator PROPERTY CXX_STANDARD 17)
+set_property(TARGET othello_simulator PROPERTY CXX_STANDARD 20)
 
-target_link_libraries(reversi_simulator util)
-target_link_libraries(reversi_simulator game)
+target_link_libraries(othello_simulator util)
+target_link_libraries(othello_simulator game)
 
