use curses for simulation

--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -5,6 +5,7 @@ set_property(TARGET connectx_simulator PROPERTY CXX_STANDARD 20)
 
 target_link_libraries(connectx_simulator util)
 target_link_libraries(connectx_simulator game)
+target_link_libraries(connectx_simulator ${CURSES_LIBRARY})
 
 # othello_simulator
 add_executable(othello_simulator othello_simulator.cpp)
@@ -13,4 +14,5 @@ set_property(TARGET othello_simulator PROPERTY CXX_STANDARD 20)
 
 target_link_libraries(othello_simulator util)
 target_link_libraries(othello_simulator game)
+target_link_libraries(othello_simulator ${CURSES_LIBRARY})
 
