--- a/src/app/CMakeLists.txt
+++ b/src/app/CMakeLists.txt
@@ -16,6 +16,16 @@ target_link_libraries(connectx_minimax util)
 target_link_libraries(connectx_minimax game)
 target_link_libraries(connectx_minimax ${CURSES_LIBRARY})
 
+# play connectx against mcgs
+add_executable(connectx_mcgs connectx_mcgs.cpp)
+
+set_property(TARGET connectx_mcgs PROPERTY CXX_STANDARD 23)
+
+target_link_libraries(connectx_mcgs util)
+target_link_libraries(connectx_mcgs game)
+target_link_libraries(connectx_mcgs ${CURSES_LIBRARY})
+
+
 # connectx minimax self play
 add_executable(connectx_minimax_selfplay connectx_minimax_selfplay.cpp)
 
@@ -34,4 +44,22 @@ set_property(TARGET othello_simulator PROPERTY CXX_STANDARD 23)
 target_link_libraries(othello_simulator util)
 target_link_libraries(othello_simulator game)
 target_link_libraries(othello_simulator ${CURSES_LIBRARY})
+
+# play othello against mcgs
+add_executable(othello_mcgs othello_mcgs.cpp)
+
+set_property(TARGET othello_mcgs PROPERTY CXX_STANDARD 23)
+
+target_link_libraries(othello_mcgs util)
+target_link_libraries(othello_mcgs game)
+target_link_libraries(othello_mcgs ${CURSES_LIBRARY})
+
+# othello mcgs self play
+add_executable(othello_mcgs_selfplay othello_mcgs_selfplay.cpp)
+
+set_property(TARGET othello_mcgs_selfplay PROPERTY CXX_STANDARD 23)
+
+target_link_libraries(othello_mcgs_selfplay util)
+target_link_libraries(othello_mcgs_selfplay game)
+target_link_libraries(othello_mcgs_selfplay ${CURSES_LIBRARY})
 
